<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/dialog_width"
        android:layout_height="@dimen/dialog_height"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/sobreAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sobreAutor" />

        <TextView
            android:id="@+id/sobreCurso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sobreCurso" />

        <TextView
            android:id="@+id/sobreObjetivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sobreObjetivo" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>